fix center alignment for contents

--- a/src/wallet_setup/ImportPrivateKey.scss
+++ b/src/wallet_setup/ImportPrivateKey.scss
@@ -17,7 +17,7 @@
 
   text-align: center;
 
-  .container {
+  .content-container {
     margin: 5px;
   }
   .fa-icon {
